[package]
name = "ping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
default-net = "0.15.0"
internet-checksum = "0.2.1"
nix = { git = "https://github.com/Dev380/nix", branch = "int-protocols", features = ["socket", "uio"] }
